[package]
name = "goggles"
version = "0.1.1-alpha.0"
authors = ["kyren <kerriganw@gmail.com>"]
edition = "2018"
description = "Building blocks for a hibitset based ECS library"
readme = "README.md"
repository = "https://github.com/kyren/goggles"
documentation = "https://docs.rs/goggles"
keywords = ["gamedev", "ecs"]
license = "MIT OR Apache-2.0"

[badges]
circle-ci = { repository = "kyren/goggles", branch = "master" }

[dependencies]
atomic_refcell = "0.1"
hibitset = "0.6"
rayon = "1.3"
thiserror = "1.0"
