[package]
name = "goggles"
version = "0.2.1-alpha.0"
authors = ["kyren <kerriganw@gmail.com>"]
edition = "2018"
description = "Building blocks for a hibitset based ECS library"
readme = "README.md"
repository = "https://github.com/kyren/goggles"
documentation = "https://docs.rs/goggles"
keywords = ["gamedev", "ecs"]
license = "MIT OR Apache-2.0"

[badges]
circle-ci = { repository = "kyren/goggles", branch = "master" }

[dependencies]
anymap = "0.12"
atomic_refcell = "0.1"
hibitset = "0.6"
rayon = { version = "1.3", optional = true }
thiserror = "1.0"

[features]
default = ["rayon"]
